--- a/less/form.less
+++ b/less/form.less
@@ -21,7 +21,10 @@
         .flex(none; none);
         flex-direction: column;
         width: 100%;
-        height: 130.0rem;
+        height: 77.5rem;
+        @media @phone {
+            height: 42.0rem;
+        }
         .form {
             .flex(none; center);
             flex-direction: column;
