--- a/less/mixins.less
+++ b/less/mixins.less
@@ -14,7 +14,10 @@
     &:hover {
         color: @porcelain;
         background-color: @btn-bg-color;
-    }
+    }//&:hover
+    @media @phone {
+        font-size: 1.5rem;
+    }//@media
 }
 
 .margin(@top; @lr; @bottom) {
